--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <div class="well"
-            <%= form_for @contact do |f| %>
+        <div class="well">
+            <%= form_for @contact, :method => :get do |f| %>
                 <div class="form-group">
                     <%= f.label :name %>
                     <%= f.text_field :name, class: 'form-control' %>
@@ -16,8 +16,8 @@
                     <%= f.label :comments %>
                     <%= f.text_area :comments, class: 'form-control' %>
                 </div>
-                    <%= f.submit 'Submit', class: 'btn btn-default' %>
-            <% end %>
+                    <%= f.submit type="Submit", class: "btn btn-default" %>
+              <% end %>
         </div>
     </div>
 </div>
