--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,8 @@
 
 <div class="container">
   <% flash.each do |key, value| %>
-    <div class="alert alert-success" role="alert"<%= key %>.alert-dismissible><%= value %></div>
-    <div class="alert alert-danger" role="alert"<%= key %>.alert-dismissible><%= value %></div>
+    <div class="alert alert-success", role="alert"<%= key %>.alert-dismissible><%= value %></div>
+    <div class="alert alert-danger", role="alert"<%= key %>.alert-dismissible><%= value %></div>
       <button type="button", class="close", data-dismiss="alert", aria-label="Close"><span aria-hidden="true">&times;</span></button>
   <% end %>
   
