--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4 col-md-ofset-4">
+  <div class="col-md-4 col-md-offset-4">
     <div class="well">
       <%= form_for @contact, :method => :get do |f| %>
         <div class="form-group">
@@ -17,6 +17,7 @@
             <%= f.text_area :comments, class: 'form-control' %>
         </div>
             <%= f.submit type="Submit", class: "btn btn-default" %>
+      <% end %>
     </div>
   </div>
 </div>
